@@ -3,7 +3,11 @@ Changelog Bypass Paywalls Clean - Chrome
 
 Post-release
 Remove (custom) Substack (fix obsolete)
+Fix Citywire
+Fix DN.no
 Fix Gruppo SAE.it (free articles only)
+Fix LePoint.fr
+Fix Schwaebische.de
 Fix Tagesspiegel.de (not background/checkpoint)
 Update custom sites/popup (remove Google Search Tool)
 
